# parametrization

./: .gitignore  LICENSE  README.md  parametrization.py  pyproject.toml  setup.py
tests/: test_parametrization.py
